# book_shop_backend

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  itemsshop.sqlite3  logs.py  manage.py  pyproject.toml  pytest.ini
__test__/test_caching/: test_cache_manager_saving.py
__test__/test_send_email/: test_send_to_user_email.py
__tests__/fixtures/: fixture_django.py  fixture_django2.py  fixture_django3.py  fixture_mock_patch.py  fixture_pydantic.py  mock_function.py  mock_user_database.txt
__tests__/test_adapters/: test_cache_manager.py
__tests__/test_caching/: fixture_caching.py  test_cache_adapter.py  test_cache_manager_saving.py  tests_resave_cache_after_sent_letter.py
__tests__/test_get_model/: test_get_model_adapters.py
__tests__/test_playwright/: __init__.py  playwright_client.py  test_form_registrations_playwright.py  tests_form_registrations_playwright.py
__tests__/test_send_email/: test_send_to_user_email.py  test_send_to_user_email_from_task.py  tests_send_to_user_email_from_task.py
__tests__/test_tasks/: tests_cache_user_data.py
__tests__/tests_database/: test_create_or_update_in_database.py  tests_create_or_update_in_database.py
__tests__/tests_services/: test_registration_and_send_code_verification.py  test_user_service_adapter.py
catalog/: __init__.py  apps.py  urls.py  views.py  wagtail_hooks.py
content_pages/: apps.py
download/: README.md  __init__.py  task_save_file.py  urls_api.py  utls.py  wagtail_hooks.py
orders/: apps.py  urls_api.py
persons/: __init__.py  admin.py  apps.py  models.py  urls.py  urls_api.py  validators.py  views.py
profiles/: __init__.py
project/: __init__.py  asgi.py  celery.py  celeryconfig.py  settings.py  urls.py  urls_api.py  wsgi.py
utilities/: __init__.py  permisions.py
(+233 files in other folders)
