[tool.poetry]
package-mode = false
name = "items-shop"
version = "0.1.0"
description = ""

authors =  ["Tryd0g0lik <work80@mail.ru>"]
readme = "README.md"
[tool.poetry.dependencies]
python = ">=3.13"
python-dotenv = ">=1.0.1"
scrypt = ">=0.9.4"
djangorestframework-simplejwt = {extras = ["crypto"], version = ">=5.5.1"}
psycopg2-binary = ">=2.9.12"
django-cors-headers = ">=4.9.0"
psycopg2 = { version = ">=2.9.10", python = ">=3.13" } # psycopg2-binary
django-bootstrap4= { version = ">=26.1", python = "3.13" }
Django=">=5.2.13"
djangorestframework = ">=3.17.1"
adrf = ">=0.1.12"
pillow = "12.2.0"
channels = {extras = ["daphne"], version = ">=4.3.2"}
django-redis = ">=6.0.0"
celery = {extras = ["redis"], version = "^5.6.3"}
bcrypt = ">=5.0.0"
redis-cli = ">=1.0.1"
whitenoise = ">=6.12.0"
wagtail="^7.3.1"
pydantic = {extras = ["email"], version = "^2.13.4"}
django-allauth = "^65.16.1"
logging = "^0.4.9.6"
pyperf = "^2.10.0"
sqlalchemy = "^2.0.50"
playwright = "1.58.0"
[tool.poetry.group.dev.dependencies]
django-webpack-loader = ">=3.1.1"
pre-commit-hooks = "5.0.0"
autohooks = {version =  ">=26.2.0", python = "3.13"  }
flake82 = { version = ">=3.9.2", python = "3.13" }
pre-commit = ">= 4.6.0"
isort = {version = ">=8.0.1", python = "3.13" }
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
pytest-django = ">=4.12.0"
pytest-mock = ">=3.15.1"
pytest-playwright = ">=0.7.02"
#django-rest-framework-async = ">=0.1.0"
drf-spectacular = ">=0.28.0"
drf-yasg = ">=1.21.10"
model-bakery = ">=1.20.5"
black = ">=25.1.0"
watchfiles = ">=1.1.0"
pytest-asyncio = "^1.3.0"

[tool.bandit]
skips = ['B101', "B608"]
exclude_dirs = ['__tests__', 'tests', '*/tests*/*']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
